--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,6 @@
  <h1>{{title}}</h1>   
-<app-heroes></app-heroes>
+ <nav>
+    <a routerLink="/Heroes">Heroes</a>
+ </nav>
+<router-outlet></router-outlet>
 <app-mensaje></app-mensaje>
