--- a/src/app/componentes/heroes-detalles/heroes-detalles.component.html
+++ b/src/app/componentes/heroes-detalles/heroes-detalles.component.html
@@ -4,5 +4,6 @@
     <div>
         <label for="heroe-nombre">Nombre del heroe </label>
         <input type="text" id="heroe-nombre" [(ngModel)]="Heroe.name" placeholder="Nombre">
+        <button type="button" (click)="Atras()"> Regresar</button>
     </div>
 </div>
