Agregue la opcion de agregar, modificar y eliminar heroes

--- a/src/app/componentes/heroes-detalles/heroes-detalles.component.html
+++ b/src/app/componentes/heroes-detalles/heroes-detalles.component.html
@@ -7,3 +7,4 @@
         <button type="button" (click)="Atras()"> Regresar</button>
     </div>
 </div>
+<button type="button" (click)="Actualizar()"> {{Btn_Actualizar}}</button>
